syntax = "proto3";

service GrpcBuiltinLedger {
  // All unary RPCs.
  rpc CreateAccounts(BuiltinLedgerGrpcAccountArray) returns (BuiltinLedgerGrpcIdArray);
  rpc CreateJournalEntries(BuiltinLedgerGrpcJournalEntryArray) returns (BuiltinLedgerGrpcIdArray);
  rpc GetAccountsByIds(BuiltinLedgerGrpcIdArray) returns (BuiltinLedgerGrpcAccountArray);
  rpc GetJournalEntriesByAccountId(BuiltinLedgerGrpcId) returns (BuiltinLedgerGrpcJournalEntryArray);
}

/* Id. */

message BuiltinLedgerGrpcId {
  string builtinLedgerGrpcId = 1;
}

message BuiltinLedgerGrpcIdArray {
  repeated BuiltinLedgerGrpcId builtinLedgerGrpcIdArray = 1;
}

/* Account. */

message BuiltinLedgerGrpcAccount {
  string id = 1;
  string state = 2;
  string type = 3;
	string currencyCode = 4;
  string debitBalance = 5;
  string creditBalance = 6;
  uint64 timestampLastJournalEntry = 7;
}

message BuiltinLedgerGrpcAccountArray {
  repeated BuiltinLedgerGrpcAccount builtinLedgerGrpcAccountArray = 1;
}

/* Journal entry. */

message BuiltinLedgerGrpcJournalEntry {
  string id = 1;
	string currencyCode = 2;
	string amount = 3;
	string debitedAccountId = 4;
  string creditedAccountId = 5;
  uint64 timestamp = 6;
}

message BuiltinLedgerGrpcJournalEntryArray {
  repeated BuiltinLedgerGrpcJournalEntry builtinLedgerGrpcJournalEntryArray = 1;
}
